--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.mustache.suffix:.html
+#spring.mustache.suffix:.html
 spring.datasource.url=jdbc:mysql://localhost:3306/cake_shop?useSSL=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Warsaw&autoReconnect=true&characterEncoding=UTF-8&useUnicode=yes
 spring.datasource.username=root
 spring.datasource.password=lucero
