--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=lucero
 debug=true 
 flyway.enabled=true
+spring.devtools.restart.enabled = false
 
